--- a/公益计算器 html/list.html
+++ b/公益计算器 html/list.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>计算器</title>
+<title>明细计算器</title>
 <link type="text/css" rel="stylesheet" href="css/main.css"/>
 </head>
 <body style="background: none;">
